--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -6,7 +6,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
 	<servlet>
 		<servlet-name>Mta_java_chen</servlet-name>
-		<servlet-class>com.mta.chen.Mta_java_chenServlet</servlet-class>
+		<servlet-class>com.mta.chen.servlet.Mta_java_chenServlet</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
@@ -16,12 +16,22 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 
 	<servlet>
 		<servlet-name>StockDetails</servlet-name>
-		<servlet-class>com.mta.chen.StockDetailsServlet</servlet-class>
+		<servlet-class>com.mta.chen.servlet.StockDetailsServlet</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
 		<servlet-name>StockDetails</servlet-name>
 		<url-pattern>/stockDetails</url-pattern>
+	</servlet-mapping>
+	
+		<servlet>
+		<servlet-name>PortfolioServlet</servlet-name>
+		<servlet-class>com.mta.chen.servlet.PortfolioServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>PortfolioServlet</servlet-name>
+		<url-pattern>/Portfolio</url-pattern>
 	</servlet-mapping>
 	
 	<welcome-file-list>
